--- a/ProyectoAngular/src/app/Componentes/header/header.component.html
+++ b/ProyectoAngular/src/app/Componentes/header/header.component.html
@@ -4,14 +4,11 @@
 
     </head>
     <body>
-        <div class="inicio">
-                <div class="divLogo">
-                    <img src="assets/images/airplane-flying.png" class="iconoLogo" >
-                </div>
-                <div class="divInicoRegistro">
-                    <img src="assets/images/login.png" class="userLogo" >
-                </div>
-        </div>
+       
+            <div class="navbar">
+                    <p class="easy">EASY</p><p class="travel">TRAVEL</p>
+            </div>
+        
     </body>
 </html>
 
