--- a/ProyectoAngular/src/app/Componentes/main/main/main.component.css
+++ b/ProyectoAngular/src/app/Componentes/main/main/main.component.css
@@ -60,7 +60,6 @@
     background-color: #aeecf2;
     align:right;
     width: 90px;
-    height: 20px;
     transition-duration: 0.4s;
     border: 0;
     border-top-left-radius: 5px;
@@ -73,4 +72,42 @@
     color: #aeecf2;
     
    
+}
+.viajes{
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    margin-top: 50px;
+}
+
+.seccion{
+    margin-bottom: 50px;
+}
+.viaje1{
+    width: 33%;
+    display: inline-block;
+    align:left;
+}
+.viaje2{
+    width: 33%;
+    display: inline-block;
+    align:center;
+}
+.viaje3{
+    width: 33%;
+    display: inline-block;
+    align:right;
+}
+.imagenesV{
+    border-radius: 6px;
+}
+.tituloViaje{
+    font-size: 25px;
+    font-weight: bold;
+    margin-top: 20px;
+}
+.precioViaje{
+    font-size: 18px;
+    color: grey;
+    margin-top: 20px;
 }
