--- a/ProyectoAngular/src/app/Componentes/main/main/main.component.html
+++ b/ProyectoAngular/src/app/Componentes/main/main/main.component.html
@@ -35,8 +35,39 @@
         </div>
     </div>
     <div class="viajes">
-
+        <section class="seccion">
+            <div class="viaje1">
+                <img src="\assets\images\itinerario-venecia.jpg" alt="Venecia" width="300" height="150" class="imagenesV">
+                <p class="tituloViaje">Venecia</p>
+                <p class="precioViaje">Desde 300€</p>
+            </div>
+            <div class="viaje2">
+                <img src="\assets\images\paris.jpg" alt="Venecia" width="300" height="150" class="imagenesV">
+                <p class="tituloViaje">Paris</p>
+                <p class="precioViaje">Desde 170€</p>
+            </div>
+            <div class="viaje3">
+                <img src="\assets\images\Estocolmo.jpg" alt="Venecia" width="300" height="150" class="imagenesV">
+                <p class="tituloViaje">Estocolmo</p>
+                <p class="precioViaje">Desde 400€</p>
+            </div>
+        </section>
+        <section class="seccion">
+            <div class="viaje1">
+                <img src="\assets\images\Amsterdan.jpg" alt="Venecia" width="300" height="150" class="imagenesV">
+                <p class="tituloViaje">Amsterdan</p>
+                <p class="precioViaje">Desde 195€</p>
+            </div>
+            <div class="viaje2">
+                <img src="\assets\images\Tokio.jpg" alt="Venecia" width="300" height="150" class="imagenesV">
+                <p class="tituloViaje">Tokio</p>
+                <p class="precioViaje">Desde 500€</p>
+            </div>
+            <div class="viaje3">
+                <img src="\assets\images\Londres.jpg" alt="Venecia" width="300" height="150" class="imagenesV">
+                <p class="tituloViaje">Londres</p>
+                <p class="precioViaje">Desde 280€</p>
+            </div>
+        </section>
     </div>
-    <p>Fer</p>
-    <h1>sdsdds</h1>
 </div>
