--- a/ProyectoAngular/src/app/Componentes/header/header.component.html
+++ b/ProyectoAngular/src/app/Componentes/header/header.component.html
@@ -8,7 +8,9 @@
             <div class="navbar">
                     <p class="easy">EASY</p><p class="travel">TRAVEL</p>
             </div>
-        
+            <div >
+                <button class="botonLogin" >Log in</button>
+            </div>
     </body>
 </html>
 
