--- a/ProyectoAngular/src/app/Componentes/login/login.component.html
+++ b/ProyectoAngular/src/app/Componentes/login/login.component.html
@@ -1,5 +1,6 @@
 <div class="login">
     <form class="custom-form" method="post">
+      <button type = "button" (click)="closeLogin()">X</button>
       <h1>Iniciar sesión</h1>
       <input
         type="email"
