--- a/ProyectoAngular/src/app/Componentes/header/header.component.html
+++ b/ProyectoAngular/src/app/Componentes/header/header.component.html
@@ -9,7 +9,10 @@
                     <p class="easy">EASY</p><p class="travel">TRAVEL</p>
             </div>
             <div >
-                <button class="botonLogin" >Log in</button>
+                <button class="botonLogin" (click)="openLogin()">Log in</button>
+            </div>
+            <div *ngIf="modalSwitch == true">
+                <app-login></app-login>
             </div>
     </body>
 </html>
