--- a/ProyectoAngular/src/app/Componentes/login/login.component.html
+++ b/ProyectoAngular/src/app/Componentes/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login">
     <form class="custom-form" method="post">
-      <button type = "button" (click)="closeLogin()">X</button>
+      <button type = "button" class="cerrar" (click)="closeLogin()">X</button>
       <h1>Iniciar sesión</h1>
       <input
         type="email"
@@ -15,7 +15,7 @@
         required="required"
       />
       <p>¿Has olvidado tu contraseña?</p>
-      <button type="submit" (click)="login()">Entrar</button>
+      <button type="submit" class="entrar" (click)="login()">Entrar</button>
       <p>¿No tienes una cuenta?</p>
       <p>Regístrate</p>
     </form>
