Cambios de margen

--- a/ProyectoAngular/src/app/Componentes/header/header.component.css
+++ b/ProyectoAngular/src/app/Componentes/header/header.component.css
@@ -1,15 +1,15 @@
 
 .navbar{
-    overflow: hidden;
+  overflow: hidden;
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
   width: 100%; /* Full width */
-  background-color: white;
-  margin-left: 10%;
-    margin-right: 10%;
+  background-color: rgb(250, 250, 250);
+  padding-left: 10%;
+  padding-right: 10%;
 }
 .navbar a:hover {
-    background: #ddd;
+  background-color: white;
     color: black;
   }
 .easy{
