--- a/ProyectoAngular/src/app/Componentes/header/header.component.html
+++ b/ProyectoAngular/src/app/Componentes/header/header.component.html
@@ -4,10 +4,12 @@
 
     </head>
     <body>
-       
-            <div class="navbar">
-                    <p class="easy">EASY</p><p class="travel">TRAVEL</p>
-            </div>
+       <div  class="menu">
+                <div class="navbar">
+                        <p class="easy">EASY</p><p class="travel">TRAVEL</p>
+                </div>
+       </div>
+           
         
     </body>
 </html>
