--- a/ProyectoAngular/src/app/Componentes/main/main/main.component.css
+++ b/ProyectoAngular/src/app/Componentes/main/main/main.component.css
@@ -1,5 +1,5 @@
 .general{
-    margin-top: 100px;
+    padding-top: 100px;
     margin-left: 10%;
     margin-right: 10%;
 }
@@ -125,8 +125,14 @@
     font-weight: bold;
     margin-top: 20px;
     text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
+.general2{
+    width: 90%;
+    padding-left: 10%;
+   
+}
 
 .viajesN{
     width: 100%;
@@ -136,20 +142,56 @@
 }
 
 .ngf{
-    padding-left: 10%;
-    padding-right: 6.5%;
+    margin-right: 9.8%;
+    width: 23%;
     display: inline-block;
     margin-bottom: 50px;
-    text-align: justify;
     
 }
 .viaje1N{
-    width: 30%;
+    width: 100%;
+    height: 100%;
     display: inline-block;
     align:left;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 1px 2px 2px 2px gray;
+   
 }
 
+.imageViaje{
+    width:60%;
+    height:150px; 
+    border-radius: 5px;
+    float: left;
+}
+.textViaje{
+    width:40%;
+    float: right;
+    height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+  
+}
+.red{
+    color: red;
+}
 
+.tituloViaje2{
+    font-size: 25px;
+    font-weight: bold;
+    margin-top: 20px;
+    text-align: left;
+    padding-left: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.precioViaje2{
+    font-size: 18px;
+    color: rgb(82, 79, 79);
+    margin-top: 70px;  
+    padding-left: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 
 
