--- a/ProyectoAngular/src/app/Componentes/header/header.component.html
+++ b/ProyectoAngular/src/app/Componentes/header/header.component.html
@@ -1,21 +1,10 @@
-<!DOCTYPE html>
-<html>
-    <head>
-
-    </head>
-    <body>
-
             <div class="navbar">
-                    <p class="easy">EASY</p><p class="travel">TRAVEL</p>
-                    
-            </div>
-            
-            <div *ngIf="!loginSwitch">
-                <button class="botonLogin" (click)="openLogin()">Log in</button>
+                <br>
+                <p class="easy">EASY</p><p class="travel">TRAVEL</p>
+                <button *ngIf="!loginSwitch" class="botonLogin" (click)="openLogin()">Log in</button>
             </div>
             <div *ngIf="loginSwitch">
                 <app-login></app-login>
             </div>
-    </body>
-</html>
+
 
