--- a/ProyectoAngular/src/app/Componentes/login/login.component.css
+++ b/ProyectoAngular/src/app/Componentes/login/login.component.css
@@ -46,6 +46,7 @@
     padding: 0.875rem 1rem;
     border-radius: 1.5rem;
     cursor: pointer;
+    margin: auto;
   }
   .cerrar {
     border: none;
