--- a/ProyectoAngular/src/app/Componentes/main/main/main.component.css
+++ b/ProyectoAngular/src/app/Componentes/main/main/main.component.css
@@ -312,7 +312,7 @@
 }
 
 .imagenLinea {
-    width: 20%;
+    width: 38%;
     height: 20px;
     margin-top: 20px;
     margin-left: 5%;
@@ -320,7 +320,7 @@
 }
 
 .aeropuertoD {
-    margin-right: 16%;
+    margin-right: 10%;
     float: right;
     margin-top: 0%;
     display: inline;
@@ -328,7 +328,7 @@
 }
 
 .aeropuertoI {
-    margin-right: 17%;
+    margin-right: 150px;
     float: left;
     margin-top: 0%;
     display: inline;
@@ -350,7 +350,8 @@
 .fondoHotel {
     margin-top: 5%;
     margin-left: 34%;
-    padding: 3px;
+    height: 50px;
+    padding: 5px;
     background-color: #e7f0fc;
     border-radius: 10px;
     box-shadow: 0.5px 0.5px 3px 3px #e6e9ea;
@@ -368,7 +369,9 @@
 
 .precioTotal {
     margin: 0%;
+    padding-right: 0%;
     color: #797979;
+    float: right;
 }
 
 .anyadir {
