--- a/ProyectoAngular/src/app/Componentes/main/main/main.component.html
+++ b/ProyectoAngular/src/app/Componentes/main/main/main.component.html
@@ -18,7 +18,7 @@
                 <div><p>Presupuesto</p></div>
                 <div class="">
                     <div class="desp">
-                        <input type="text" value="500€" class="despegable" id="prep" formControlName="Presupuesto">
+                        <input type="number" value="500€" class="despegable" id="prep" formControlName="Presupuesto">
                     </div>
                 </div>
             </div>
