--- a/ProyectoAngular/src/app/Componentes/login/login.component.css
+++ b/ProyectoAngular/src/app/Componentes/login/login.component.css
@@ -46,8 +46,10 @@
     padding: 0.875rem 1rem;
     border-radius: 1.5rem;
     cursor: pointer;
+    
   }
   .cerrar {
     border: none;
+    float: right;
   }
   
